--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                 <img
                   class="section-about__img-item"
                   src="./img/face_1.jpg"
+                  srcset="./img/face_1.jpg 1x, ./img/face_1@2x.jpg 2x"
                   alt="Обличчя жінки під час процедур"
                 />
                 <img class="star-top" src="./img/Star_top.svg" alt="" />
@@ -173,6 +174,7 @@
                 <img
                   class="section-about__img-item"
                   src="./img/face_2.jpg"
+                  srcset="./img/face_2.jpg 1x, ./img/face_2@2x.jpg 2x"
                   alt="Обличчя жінки під час процедур"
                 />
               </div>
@@ -256,6 +258,10 @@
                       <img
                         class="procedures-card__image"
                         src="./img/procedures_1.png"
+                        srcset="
+                          ./img/procedures_1.png    1x,
+                          ./img/procedures_1@2x.png 2x
+                        "
                         alt="Процедури"
                       />
                       <h3 class="procedures-card__title">Маски для обличчя</h3>
@@ -267,6 +273,10 @@
                       <img
                         class="procedures-card__image"
                         src="./img/procedures_2.png"
+                        srcset="
+                          ./img/procedures_2.png    1x,
+                          ./img/procedures_2@2x.png 2x
+                        "
                         alt="Процедури"
                       />
                       <h3 class="procedures-card__title">Маски для обличчя</h3>
@@ -278,6 +288,10 @@
                       <img
                         class="procedures-card__image"
                         src="./img/procedures_3.png"
+                        srcset="
+                          ./img/procedures_3.png    1x,
+                          ./img/procedures_3@2x.png 2x
+                        "
                         alt="Процедури"
                       />
                       <h3 class="procedures-card__title">Маски для обличчя</h3>
@@ -289,6 +303,10 @@
                       <img
                         class="procedures-card__image"
                         src="./img/procedures_1.png"
+                        srcset="
+                          ./img/procedures_1.png    1x,
+                          ./img/procedures_1@2x.png 2x
+                        "
                         alt="Процедури"
                       />
                       <h3 class="procedures-card__title">Маски для обличчя</h3>
@@ -300,6 +318,10 @@
                       <img
                         class="procedures-card__image"
                         src="./img/procedures_2.png"
+                        srcset="
+                          ./img/procedures_2.png    1x,
+                          ./img/procedures_2@2x.png 2x
+                        "
                         alt="Процедури"
                       />
                       <h3 class="procedures-card__title">Маски для обличчя</h3>
@@ -311,6 +333,10 @@
                       <img
                         class="procedures-card__image"
                         src="./img/procedures_3.png"
+                        srcset="
+                          ./img/procedures_3.png    1x,
+                          ./img/procedures_3@2x.png 2x
+                        "
                         alt="Процедури"
                       />
                       <h3 class="procedures-card__title">Маски для обличчя</h3>
@@ -322,6 +348,10 @@
                       <img
                         class="procedures-card__image"
                         src="./img/procedures_1.png"
+                        srcset="
+                          ./img/procedures_1.png    1x,
+                          ./img/procedures_1@2x.png 2x
+                        "
                         alt="Процедури"
                       />
                       <h3 class="procedures-card__title">Маски для обличчя</h3>
@@ -333,6 +363,10 @@
                       <img
                         class="procedures-card__image"
                         src="./img/procedures_2.png"
+                        srcset="
+                          ./img/procedures_2.png    1x,
+                          ./img/procedures_2@2x.png 2x
+                        "
                         alt="Процедури"
                       />
                       <h3 class="procedures-card__title">Маски для обличчя</h3>
@@ -344,6 +378,10 @@
                       <img
                         class="procedures-card__image"
                         src="./img/procedures_3.png"
+                        srcset="
+                          ./img/procedures_3.png    1x,
+                          ./img/procedures_3@2x.png 2x
+                        "
                         alt="Процедури"
                       />
                       <h3 class="procedures-card__title">Маски для обличчя</h3>
